Send Email Methode return scenario name

--- a/src/test/JenkinsExtentReport.html
+++ b/src/test/JenkinsExtentReport.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Apr 7, 2021 07:22:26 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Apr 9, 2021 02:56:51 PM</span>
 				</a>
 			</li>
 			<li>
@@ -157,17 +157,17 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='7'>
 					<div class='test-heading'>
-						<span class='test-name'>Browser chrome</span>
-						<span class='test-time'>Apr 7, 2021 07:22:27 PM</span>
+						<span class='test-name'>Scenario name : AllProductsFilter</span>
+						<span class='test-time'>Apr 9, 2021 02:56:52 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 7, 2021 07:22:27 PM</span>
-	<span class='label end-time'>Apr 7, 2021 07:22:27 PM</span>
+	<span class='label start-time'>Apr 9, 2021 02:56:52 PM</span>
+	<span class='label end-time'>Apr 9, 2021 02:56:52 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
-	<div class='test-desc'>The browser is luanched </div>
+	<div class='test-desc'>The browser chrome is luanched </div>
 					</div>
 				</li>
 				
@@ -175,13 +175,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='8'>
 					<div class='test-heading'>
 						<span class='test-name'>Click All products button</span>
-						<span class='test-time'>Apr 7, 2021 07:22:29 PM</span>
+						<span class='test-time'>Apr 9, 2021 02:56:56 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 7, 2021 07:22:29 PM</span>
-	<span class='label end-time'>Apr 7, 2021 07:22:29 PM</span>
+	<span class='label start-time'>Apr 9, 2021 02:56:56 PM</span>
+	<span class='label end-time'>Apr 9, 2021 02:56:56 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-desc'>Voir Plus De Produits </div>
@@ -197,12 +197,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:22:29 PM</td>
+					<td class='timestamp'>2:56:56 PM</td>
 					<td class='step-details'>By.xpath: //a[@class='all-product-link float-xs-left pull-md-right h4'] : is displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:22:29 PM</td>
+					<td class='timestamp'>2:56:56 PM</td>
 					<td class='step-details'>By.xpath: //a[@class='all-product-link float-xs-left pull-md-right h4'] : Element success</td>
 				</tr>
 			</tbody>
@@ -215,13 +215,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='9'>
 					<div class='test-heading'>
 						<span class='test-name'>Page All products</span>
-						<span class='test-time'>Apr 7, 2021 07:22:30 PM</span>
+						<span class='test-time'>Apr 9, 2021 02:56:56 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 7, 2021 07:22:30 PM</span>
-	<span class='label end-time'>Apr 7, 2021 07:22:30 PM</span>
+	<span class='label start-time'>Apr 9, 2021 02:56:56 PM</span>
+	<span class='label end-time'>Apr 9, 2021 02:56:56 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-desc'>Il y a 164 produits. </div>
@@ -237,12 +237,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:56 PM</td>
 					<td class='step-details'>By.xpath: //div[@class='col-md-5 hidden-sm-down total-products'] : is displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:56 PM</td>
 					<td class='step-details'>By.xpath: //div[@class='col-md-5 hidden-sm-down total-products'] : Element success</td>
 				</tr>
 			</tbody>
@@ -255,13 +255,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='10'>
 					<div class='test-heading'>
 						<span class='test-name'>Click to filter icon</span>
-						<span class='test-time'>Apr 7, 2021 07:22:30 PM</span>
+						<span class='test-time'>Apr 9, 2021 02:56:57 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 7, 2021 07:22:30 PM</span>
-	<span class='label end-time'>Apr 7, 2021 07:22:30 PM</span>
+	<span class='label start-time'>Apr 9, 2021 02:56:57 PM</span>
+	<span class='label end-time'>Apr 9, 2021 02:56:57 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-desc'> </div>
@@ -277,12 +277,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:57 PM</td>
 					<td class='step-details'>By.xpath: //i[@class='material-icons float-xs-right'] : is displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:57 PM</td>
 					<td class='step-details'>By.xpath: //i[@class='material-icons float-xs-right'] : Element success</td>
 				</tr>
 			</tbody>
@@ -295,13 +295,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='11'>
 					<div class='test-heading'>
 						<span class='test-name'>Click filter option</span>
-						<span class='test-time'>Apr 7, 2021 07:22:30 PM</span>
+						<span class='test-time'>Apr 9, 2021 02:56:57 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 7, 2021 07:22:30 PM</span>
-	<span class='label end-time'>Apr 7, 2021 07:22:30 PM</span>
+	<span class='label start-time'>Apr 9, 2021 02:56:57 PM</span>
+	<span class='label end-time'>Apr 9, 2021 02:56:57 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-desc'> </div>
@@ -317,12 +317,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:57 PM</td>
 					<td class='step-details'>By.xpath: //i[@class='material-icons float-xs-right'] : is displayed</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:22:30 PM</td>
+					<td class='timestamp'>2:56:57 PM</td>
 					<td class='step-details'>By.xpath: //i[@class='material-icons float-xs-right'] : Element success</td>
 				</tr>
 			</tbody>
@@ -377,19 +377,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 7, 2021 07:22:26 PM</div>
+					<div class='panel-lead'>Apr 9, 2021 02:56:51 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 7, 2021 07:22:30 PM</div>
+			 		<div class='panel-lead'>Apr 9, 2021 02:56:57 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 4s+74ms</div>
+					<div class='panel-lead'>0h 0m 5s+668ms</div>
 				</div>
 			</div>
 		</div>
